--- a/templates/fountainchurch/blog.html
+++ b/templates/fountainchurch/blog.html
@@ -9,11 +9,11 @@
         <div class="container py-5">
             <div class="row justify-content-center">
                 <div class="col-lg-10 text-center">
-                    <h1 class="display-3 text-white animated slideInDown">Fountain Blog </h1>
+                    <h1 class="display-3 text-white animated slideInDown">Fountain Church Blog </h1>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center">
-                            <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
-                            <li class="breadcrumb-item"><a class="text-white" href="#">Events</a></li>
+                            <li class="breadcrumb-item"><a class="text-white" href="{% url 'home'%}">Home</a></li>
+                            <li class="breadcrumb-item"><a class="text-white" href="{% url 'events'%}">Events</a></li>
                         </ol>
                     </nav>
                 </div>
@@ -36,11 +36,14 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="course-item bg-light">
                         <div class="position-relative overflow-hidden">
+                            <a href="{% url 'blog_detail' post.pk %}">
                             <img class="img-fluid" src="{{ post.blog_img.url }}"style="height: 250px; width: 100%; object-fit: cover;" alt="">
+                        </a>
                             <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
                                 <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Read More</a>
                                 <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Join Now</a>
                             </div>
+                       
                         </div>
                         <div class="text-center p-4 pb-0">
                             <h3 class="mb-0">{{ post.blog_title|truncatechars:20}}</h3>
