--- a/templates/fountainchurch/events.html
+++ b/templates/fountainchurch/events.html
@@ -12,8 +12,8 @@
                     <h1 class="display-3 text-white animated slideInDown">Fountain Up Coming Event </h1>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center">
-                            <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
-                            <li class="breadcrumb-item"><a class="text-white" href="#">Blog Post</a></li>
+                            <li class="breadcrumb-item"><a class="text-white" href="{% url 'home' %}">Home</a></li>
+                            <li class="breadcrumb-item"><a class="text-white" href="{% url 'blog' %}">Blog Post</a></li>
                         </ol>
                     </nav>
                 </div>
