--- a/templates/base.html
+++ b/templates/base.html
@@ -61,6 +61,7 @@
                         <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                     </div>
                 </div>
+                <a href="{% url 'sermons' %}" class="nav-item nav-link">Sermons</a>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Media</a>
                     <div class="dropdown-menu fade-down m-0">
