--- a/templates/fountainchurch/sermons.html
+++ b/templates/fountainchurch/sermons.html
@@ -1,7 +1,7 @@
 
 {% extends "base.html" %}
 {% load static %}
-{% block title %} Events and News {% endblock %}
+{% block title %} Sermons {% endblock %}
 {% block content%}
 
     <!-- Header Start -->
@@ -27,25 +27,22 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                <h6 class="section-title bg-white text-center text-primary px-3">Church News</h6>
-                <h1 class="mb-5">Popular Events</h1>
-            </div>
+                <h6 class="section-title bg-white text-center text-primary px-3">Church Sermons</h6>
+            </div><br>
             <div class="row g-4 justify-content-center">
                 {% for post in object_list %}
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="course-item bg-light">
                         <div class="position-relative overflow-hidden">
-                            <a href="{% url 'events_article_detail' post.pk %}">
                             <img class="img-fluid" src="{{ post.Events_img.url }}"style="height: 250px; width: 100%; object-fit: cover;" alt="">
                             </a>
-                          
                             <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
                                 <a href="{% url 'events_article_detail' post.pk %}" class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Read More</a>
-                                <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Join Now</a>
+                                <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">{{ post.Sermons_time }}</a>
                             </div>
                         </div>
                         <div class="text-center p-4 pb-0">
-                            <a href="{% url 'events_article_detail' post.pk %}"> <h3 class="mb-0">{{ post.Events_title|truncatechars:20}}</h3></a>
+                             <h3 class="mb-0">{{ post.sermons_title|truncatechars:20}}</h3>
                             <div class="mb-3">
                                 <small class="fa fa-star text-primary"></small>
                                 <small class="fa fa-star text-primary"></small>
@@ -53,10 +50,10 @@
                                 <small class="fa fa-star text-primary"></small>
                                 <small class="fa fa-star text-primary"></small>
                             </div>
-                            <p class="mb-4">{{ post.Events_description|truncatechars:70 }}</p>
+                            <p class="mb-4">{{ post.sermons_description|truncatechars:70 }}</p>
                         </div>
                         <div class="d-flex border-top">
-                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-clock text-primary me-2"></i>{{ post.Events_time }}</small>
+                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-clock text-primary me-2"></i>Preaching by:{{ post.sermons_preach_by }}</small>
                             <small class="flex-fill text-center py-2"><i class="fa fa-user text-primary me-2"></i>{{ post.Events_date_event }}</small>
                         </div>
                     </div>
