--- a/templates/base.html
+++ b/templates/base.html
@@ -67,7 +67,6 @@
                     <div class="dropdown-menu fade-down m-0">
                         <a href="{% url 'events' %}" class="dropdown-item">News & Events</a>
                         <a href="{% url 'blog' %}" class="dropdown-item">Blog</a>
-                        <a href="404.html" class="dropdown-item">404 Page</a>
                     </div>
                 </div>
                 <a href="{% url 'contact' %}" class="nav-item nav-link">Contact</a>
@@ -99,19 +98,19 @@
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-3">Contact</h4>
                     <a href="https://maps.app.goo.gl/kkrY5vSyGTRRczi38"target="_blank">
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Jibowu Lagos</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>91/93 Jibowu, Yaba Lagos</p>
                     </a>
-                    <a href="https://wa.me/+2348106941149?text=Hi Fountain Church?"target="_blank"class="mb-0">
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+234012345</p>
+                    <a href="https://wa.me/++2349065419288?text=Hi Fountain Of The Living Church?"target="_blank"class="mb-0">
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+2349065419288</p>
                     </a>
                     <a href="mailto:fountainofthelivingwordng@gmail.com"target="_blank">
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
                     </a>
                     <div class="d-flex pt-2">
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"target="_blank"></i></a>
+                        <a class="btn btn-outline-light btn-social" href="https://www.facebook.com/share/pJrALfrUVaWZmEcK/?mibextid=LQQJ4d"><i class="fab fa-facebook-f"target="_blank"></i></a>
+                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"target="_blank"></i></a>
+                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"target="_blank"></i></a>
                     </div>
                 </div>
 
