--- a/templates/fountainchurch/contact.html
+++ b/templates/fountainchurch/contact.html
@@ -47,14 +47,14 @@
                         </div>
                     </div>
                 </a>
-                    <a href="https://wa.me/+2348106941149?text=Hi Fountain Church?"target="_blank"class="mb-0">
+                    <a href="https://wa.me/+2349065419288?text=Hi Fountain Of The Living Church?"target="_blank"class="mb-0">
                     <div class="d-flex align-items-center mb-3">
                         <div class="d-flex align-items-center justify-content-center flex-shrink-0 bg-primary" style="width: 50px; height: 50px;">
                             <i class="fa fa-phone-alt text-white"></i>
                         </div>
                         <div class="ms-3">
                             <h5 class="text-primary">Whatsapp & Mobile</h5>
-                            <p><a href="https://wa.me/+2348106941149?text=Hi Fountain Church?"target="_blank"class="mb-0">+012 345 67890</a></p>
+                            <p><a href="https://wa.me/+2349065419288?text=Hi Fountain Church?"target="_blank"class="mb-0">+012 345 67890</a></p>
                         </div>
                     </div>
                 </a>
