--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
   
 <head>
     <meta charset="utf-8">
-    <title>Fountain Living Church </title>
+    <title>Fountain Of The Living Church </title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -91,6 +91,7 @@
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-3">Quick Link</h4>
                     <a class="btn btn-link" href="{% url 'home' %}">Home</a>
+                    <a class="btn btn-link" href="{% url 'sermons' %}">Sermons</a>
                     <a class="btn btn-link" href="{% url 'about' %}">About Us</a>
                     <a class="btn btn-link" href="{% url 'contact' %}">Contact Us</a>
                     <a class="btn btn-link" href="">Privacy Policy</a>
@@ -104,13 +105,12 @@
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+2349065419288</p>
                     </a>
                     <a href="mailto:fountainofthelivingwordng@gmail.com"target="_blank">
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>fountainofthelivingwordng@gmail.com</p>
                     </a>
                     <div class="d-flex pt-2">
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"target="_blank"></i></a>
-                        <a class="btn btn-outline-light btn-social" href="https://www.facebook.com/share/pJrALfrUVaWZmEcK/?mibextid=LQQJ4d"><i class="fab fa-facebook-f"target="_blank"></i></a>
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"target="_blank"></i></a>
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"target="_blank"></i></a>
+                        <a class="btn btn-outline-light btn-social" href="https://x.com/ftlwchurchng?s=21"target="_blank"><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-outline-light btn-social" href="https://www.facebook.com/share/pJrALfrUVaWZmEcK/?mibextid=LQQJ4d"target="_blank"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-outline-light btn-social" href="https://www.instagram.com/fountainofthelivingwordng/"target="_blank"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
 
@@ -118,6 +118,7 @@
                     <h4 class="text-white mb-3">Support link</h4>
                     <a class="btn btn-link" href="{% url 'about' %}">About Us</a>
                     <a class="btn btn-link" href="{% url 'contact' %}">Contact Us</a>
+                    <a class="btn btn-link" href="{% url 'sermons' %}">Sermons</a>
                     <a class="btn btn-link" href="">Privacy Policy</a>
                 </div>
                 
