--- a/templates/fountainchurch/sermons.html
+++ b/templates/fountainchurch/sermons.html
@@ -34,17 +34,20 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="course-item bg-light">
                         <div class="position-relative overflow-hidden">
+                            <a href="{% url 'sermons_detail' post.pk %}">
                             <video autoplay muted playsinline loop width="100%" height="40%" style="height: 250px; width: 100%; object-fit: cover;"  controls>
                                 <source src="{{ post.sermons_video.url }}" type="video/mp4">
                                 Your browser does not support the video tag.
-                            </video>
+                            </video></a>
                             <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
-                                <a href="{% url 'events_article_detail' post.pk %}" class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Read More</a>
+                                <a href="{%  url 'sermons_detail' post.pk %}" class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Read More</a>
                                 <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">{{ post.Sermons_time }}</a>
                             </div>
                         </div>
                         <div class="text-center p-4 pb-0">
+                            <a href="{%  url 'sermons_detail' post.pk %}">
                              <h3 class="mb-0">{{ post.sermons_title|truncatechars:15}}</h3>
+                            </a>
                             <div class="mb-3">
                                 <small class="fa fa-star text-primary"></small>
                                 <small class="fa fa-star text-primary"></small>
