--- a/templates/base.html
+++ b/templates/base.html
@@ -55,10 +55,14 @@
                 <a href="{% url 'home' %}" class="nav-item nav-link active">Home</a>
                 <a href="{% url 'about' %}" class="nav-item nav-link">About</a>
                 <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Ministries </a>
                     <div class="dropdown-menu fade-down m-0">
-                        <a href="team.html" class="dropdown-item">Our Team</a>
-                        <a href="testimonial.html" class="dropdown-item">Testimonial</a>
+                        <a href="team.html" class="dropdown-item">Pastors</a>
+                        <a href="testimonial.html" class="dropdown-item">Choir's Ministry</a>
+                        <a href="testimonial.html" class="dropdown-item">Men's Ministry</a>
+                        <a href="testimonial.html" class="dropdown-item">Women's Ministry</a>
+                        <a href="testimonial.html" class="dropdown-item">Children's Ministry</a>
+                        <a href="testimonial.html" class="dropdown-item">Prayer Ministry</a>
                     </div>
                 </div>
                 <a href="{% url 'sermons' %}" class="nav-item nav-link">Sermons</a>
@@ -67,6 +71,7 @@
                     <div class="dropdown-menu fade-down m-0">
                         <a href="{% url 'events' %}" class="dropdown-item">News & Events</a>
                         <a href="{% url 'blog' %}" class="dropdown-item">Blog</a>
+                        <a href="" class="dropdown-item">Galary</a>
                     </div>
                 </div>
                 <a href="{% url 'contact' %}" class="nav-item nav-link">Contact</a>
