--- a/templates/fountainchurch/home.html
+++ b/templates/fountainchurch/home.html
@@ -1,76 +1,34 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block content%}
-
+{% block content %}
 
     <!-- Carousel Start -->
     <div class="container-fluid p-0 mb-5">
-        
-            {% for first_image in first_images %}
-            <div class="owl-carousel-item position-relative">
-                <!--<img class="img-fluid" src="{{ first_image.fountain_church_img_img.url }}"style="height: 610px; width: 100%; object-fit: cover;"  alt="">-->
-                <video autoplay muted playsinline loop width="100%" height="100%" style="width: 100%; object-fit: cover; border-radius:5px;"  controls>
-                    <source src="{{ first_image.fountain_church_video.url }}" type="video/mp4">
-                    Your browser does not support the video tag.
-                </video>
-            </div>
+        {% for first_image in first_images %}
+        <div class="owl-carousel-item position-relative">
+            <!-- Video with Italian-style elegance -->
+            <video autoplay muted playsinline loop width="100%" height="100%" style="object-fit: cover; border-radius:5px;" controls>
+                <source src="{{ first_image.fountain_church_video.url }}" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </div>
 
-            <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
-                <a href="{% url 'audio_sermons'%}" class="flex-shrink-0 btn btn-lg btn-primary px-5 py-3" style="border-radius: 30px 30px; font-size: 13px;">Download Audio Message</a>.
-                <a href="https://www.youtube.com/@fountainofthelivingwordchu8992"target="_blank" class="flex-shrink-0 btn btn-lg btn-primary px-5 py-3" style="border-radius: 30px 30px; font-size: 10px;">Watch Online</a>
-            </div>
-            
-            {% endfor %}
+        <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
+            <a href="{% url 'audio_sermons'%}" class="flex-shrink-0 btn btn-lg btn-primary px-5 py-3" style="border-radius: 30px 30px; font-size: 13px;">Download Audio Message</a>
+            <a href="https://www.youtube.com/@fountainofthelivingwordchu8992" target="_blank" class="flex-shrink-0 btn btn-lg btn-primary px-5 py-3" style="border-radius: 30px 30px; font-size: 10px;">Watch Online</a>
+        </div>
+        {% endfor %}
     </div>
     <!-- Carousel End -->
 
-      <!-- Courses Start -->
-      <div class="container-xxl py-5">
-        <div class="container">
-            <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                <h6 class="section-title bg-white text-center text-primary px-3">Current</h6>
-                <h1 class="mb-5"style="color: #d4af37;">Current Series</h1>
-            </div>
-            <div class="row g-4 justify-content-center">
-                {% for post in object_list %}
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="course-item bg-light">
-                        <a href="{% url 'detail' post.pk %}">
-                        <div class="position-relative overflow-hidden">
-                            <img class="img-fluid" src="{{ post.fountain_church_img.url }}" style="height: 200px; width: 100%; object-fit: cover; border-radius:5px;" alt="">
-                        </div>
-                      </a>
-                        <div class="text-center p-4 pb-0">
-                            <a href="{% url 'detail' post.pk %}"><h4 class="mb-0"style="color: #d4af37;">{{ post.fountain_church_title|truncatechars:20 }}</h4></a>
-                            <p class="mb-4">{{ post.fountain_church_description|truncatechars:70 }}</p>
-                        </div>
-                        <center>
-                            <div class="btn-wrapper">
-                                <a href="{% url 'detail' post.pk %}" class="btn btn-primary" style="border-radius: 10px;">View More</a>
-                            </div><br>
-                        </center>
-                    </div>
-                </div>
-                {% endfor %}            
-            </div>
-        </div>
-    </div>
-    <!-- Courses End -->
 
-    
-    <!-- About Start -->
-    <div class="container-xxl py-5">
+     <!-- About Start -->
+     <div class="container-xxl py-5">
         <div class="container">
-            <div class="col-lg-12 wow fadeInUp" data-wow-delay="0.3s">
-                <a href="{% url 'events' %}">
-                <h2 class="mb-4 "style="color: #d4af37;padding-left:250px;">Fountain of the living world church events</h2>
-                </a>
-            </div>
-            
             <div class="row g-5">
-                <center> 
-                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s" style="min-height: 400px;width: 80%;padding-left:30px;">
+                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s" style="min-height: 400px;">
+    
                     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                           <div class="carousel-item active">
@@ -85,15 +43,89 @@
                         </div>
                       </div>
                    </div>
+                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
+                    <h3 class="mb-4"style="color: #d4af37;">About Fountain Of The Living Church</h3>
+                    <p class="mb-4">Fountain of the Living Word Nigeria, is a Pentecostal faith-based church, 
+                        affiliated with the Fountain of the Living Word, East Orange, 
+                        New Jersey, US.It is one of the fast growing churches with focus on God's word. We teach the truth and shape lives.</p>
                 </div>
-            </center>
             </div>
         </div>
     </div>
     <!-- About End -->
 
-    
-    
+
+    <!-- Current Series Start -->
+    <div class="container-xxl py-5">
+        <div class="container">
+            <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
+                <h6 class="section-title bg-white text-center text-primary px-3">Current</h6>
+                <h1 class="mb-5" style="color: #d4af37;">Current Series</h1>
+            </div>
+            <div class="row g-4 justify-content-center">
+                {% for post in object_list %}
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="course-item bg-light">
+                        <a href="{% url 'detail' post.pk %}">
+                            <div class="position-relative overflow-hidden">
+                                <img class="img-fluid" src="{{ post.fountain_church_img.url }}" style="height: 300px; width: 100%; object-fit: cover; border-radius:5px;" alt="">
+                            </div>
+                        </a>
+                        <div class="text-center p-4 pb-0">
+                            <a href="{% url 'detail' post.pk %}">
+                                <h4 class="mb-0" style="color: #d4af37;">{{ post.fountain_church_title|truncatechars:20 }}</h4>
+                            </a>
+                            <p class="mb-4">{{ post.fountain_church_description|truncatechars:70 }}</p>
+                        </div>
+                        <center>
+                            <div class="btn-wrapper">
+                                <a href="{% url 'detail' post.pk %}" class="btn btn-primary" style="border-radius: 10px;">View More</a>
+                            </div><br>
+                        </center>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+    <!-- Current Series End -->
+
+   
+    <div class="container-xxl py-5">
+        <div class="container">
+            <div class="col-lg-12 wow fadeInUp" data-wow-delay="0.1s">
+                <a href="{% url 'events' %}">
+                    <h2 class="mb-4" style="color: #d4af37; padding-left: 0; text-align: center; font-size: 1.5rem;" 
+                        class="text-lg-start text-center">
+                        Fountain of the living world church events
+                    </h2>
+                </a>
+            </div>
+            
+            
+            <div class="row g-5">
+                <center>
+                    <div class="col-lg-5 col-md-6 wow fadeInUp" data-wow-delay="0.1s" style="min-height: 400px; width: 90%; padding-left: 15px; padding-right: 15px;">
+                        <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="{% static 'img/intro.jpg' %}" style="height: 400px; width: 100%; object-fit: contain; border-radius:5px;" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="{% static 'img/rep.jpg' %}" style="height: 400px; width: 100%; object-fit: contain; border-radius:5px;" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="{% static 'img/img.jpeg' %}" style="height: 400px; width: 100%; object-fit: contain; border-radius:5px;" class="d-block w-100" alt="...">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </center>
+            </div>
+            
+        </div>
+    </div>
+
     <!-- Testimonial Start -->
     <div class="container-xxl py-5 wow fadeInUp" data-wow-delay="0.1s">
         <div class="container">
@@ -104,7 +136,7 @@
                 {% for testimony_image in testimony_images %}
                 <div class="testimonial-item text-center" style="border-radius: 5px; overflow: hidden;">
                     <img class="border rounded-circle p-2 mx-auto mb-3" src="{{ testimony_image.fountain_church_minister_home_img.url }}" style="width: 80px; height: 80px; border-radius: 50%; border-radius:5px;">
-                    <h5 class="mb-0"style="color: #d4af37;">{{ testimony_image.fountain_church_minister_home_title }}</h5>
+                    <h5 class="mb-0" style="color: #d4af37;">{{ testimony_image.fountain_church_minister_home_title }}</h5>
                     <p>{{ testimony_image.fountain_church_minister_home_position }}</p>
                     <div class="testimonial-text bg-light text-center p-4" style="border-radius: 15px;">
                         <p class="mb-0">{{ testimony_image.fountain_church_minister_home_description }}</p>
@@ -112,10 +144,8 @@
                 </div>
                 {% endfor %}
             </div>
-            
-            </div>
         </div>
     </div>
     <!-- Testimonial End -->
 
-    {% endblock %}
+{% endblock %}
